Separate testDrawSVG into a separate file

--- a/testing/test.html
+++ b/testing/test.html
@@ -5,6 +5,7 @@
 	<title>Test drawSVG.js</title>
     <script type="text/javascript" src="../scripts/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="../scripts/drawSVG.js"></script>
+    <script type="text/javascript" src="test.js"></script>
 </head>
 
 <h1>Drawing an SVG</h1>
