--- a/testing/test.html
+++ b/testing/test.html
@@ -3,7 +3,6 @@
 
 <head>
 	<title>Test drawSVG.js</title>
-    <script type="text/javascript" src="../scripts/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="../scripts/drawSVG.js"></script>
     <script type="text/javascript" src="../scripts/drawMolecule.js"></script>
     <script type="text/javascript" src="test.js"></script>
@@ -115,8 +114,7 @@ CONECT   46   27
 CONECT   47   29
 END
 </textarea>
-<div id="moleculeSVG" style="border:1px solid #888;width:300px;height:300px;display:inline-block">
-	Target div
+<div id="moleculeSVG" style="border:1px solid #888;width:300px;height:300px;display:inline-block" onload="testMolecule();">
 </div>
 
 </html>
